# HAR-Assignment

./: Makefile  README.md  environment.yml  pyproject.toml
engsci712_har/: __init__.py  dataset.py  features.py  plots.py
engsci712_har/modeling/: predict.py  train.py
notebooks/: Engsci_712_A1.ipynb
reports/: Engsci_712_A1.html
