[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "engsci712_har"
version = "0.0.1"
description = "ENGSCI712 Human Activity Recognition Assignment"
authors = [
  { name = "David" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11"


[tool.ruff]
line-length = 99
src = ["engsci712_har"]
include = ["pyproject.toml", "engsci712_har/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["engsci712_har"]
force-sort-within-sections = true

